# dgxtop

./: Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
docs/: README.ja.md  README.zh-CN.md  README.zh-TW.md
src/config/: app_config.rs  cli.rs
src/ui/: theme.rs
src/ui/views/: overview.rs
