[package]
name = "dgxtop"
version = "0.1.0"
edition = "2024"
description = "A high-performance, interactive system monitor for NVIDIA DGX systems"
license = "Apache-2.0"
repository = "https://github.com/mamorett/dgxtop"
keywords = ["nvidia", "dgx", "gpu", "monitor", "tui"]
categories = ["command-line-utilities", "hardware-support"]

[dependencies]
# TUI
ratatui = { version = "0.30", features = ["crossterm"] }
crossterm = "0.29"

# GPU monitoring
nvml-wrapper = "0.12"

# CLI & Config
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"

# Concurrency
crossbeam-channel = "0.5"

# System
nix = { version = "0.31", features = ["signal", "process", "user"] }
libc = "0.2"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Utilities
unicode-width = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
